# besom

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
cfs/besom_io/: CMakeLists.txt
cfs/besom_io/fsw/inc/: besom_io_app.h
cfs/besom_io/fsw/src/: besom_io_app.c
ci/: build-cfs.sh
docs/: determinism-under-load.md  phase0.md
patches/: cfs-mission-config.patch  osal-simulated-time.patch  psp-header-guard.patch  psp-timebase-besom.patch
src/: ccsds.rs  chrome.rs  clock.rs  dynamics.rs  evs.rs  fsw.rs  gui.rs  lib.rs  main.rs  main_gui.rs  quiesce.rs  run.rs  session.rs  theme.rs  transcript.rs  view3d.rs
